# deko

./: Cargo.toml  README.md
.github/workflows/: cargo-update.yml  ci.yml
ci/: Dockerfile  cargo-update.sh  docker.sh  lint.sh  preamble.sh  test.sh
src/: constants.rs  decoder.rs  format.rs  inner_decoder.rs  lib.rs  magic_reader.rs  tests.rs
src/bufread/: decoder.rs  magic_reader.rs  mod.rs
src/read/: decoder.rs  magic_reader.rs  mod.rs
src/test/: bufread.rs  finish.rs  mod.rs  n_bytes_reader.rs  read.rs  write.rs
src/write/: encoder.rs  mod.rs
