[package]
name = "any-decoder"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/igankevich/any-decoder"
repository = "https://github.com/igankevich/any-decoder"
documentation = "https://docs.rs/any-decoder"
readme = "README.md"
description = "A decoder that automatically detects compression format (bzip, bzip2, xz, zstd) via external crates. Includes encoder as well."
#keywords = ["format", "duration", "bytes", "configuration", "serialization"]
#categories = ["encoding", "value-formatting", "config", "data-structures"]
include = ["**/*.rs", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
bzip2 = { version = "0.4.4", optional = true }
flate2 = { version = "1.0.33", optional = true }
xz = { version = "0.1.0", optional = true }
zstd = { version = "0.13.2", optional = true }

[dev-dependencies]
arbitrary = { version = "1.4.1", features = ["derive", "derive_arbitrary"] }
arbtest = "0.3.1"

[features]
default = ["bzip2", "flate2", "xz", "zstd"]
# Override methods only available in Rust Nightly.
nightly = []
bzip2 = ["dep:bzip2"]
flate2 = ["dep:flate2"]
xz = ["dep:xz"]
zstd = ["dep:zstd"]

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[lints.rust]
#missing_docs = "warn"
